<resources>
    <string name="app_name">CreditCalc</string>
    <string name="app_title">Choose your credit type</string>
    <string name="radio1">Differential</string>
    <string name="radio2">Annuity</string>
    <string name="sumbox">Sum:</string>
    <string name="percentbox">Percent:</string>
    <string name="durationbox">Months:</string>
    <string name="calcbtn">Calculate</string>
</resources>
